# vision_cuda

./: .gitignore  CMakeLists.txt  README.md  run.sh
image/: CMakeLists.txt  image.cpp  image.h
rgb2gray/: CMakeLists.txt  rgb2gray.cu  rgb2gray.h
sobel/: CMakeLists.txt  sobel.cu  sobel.h
test/: CMakeLists.txt  sobel.cpp
